--- a/front/src/index.css
+++ b/front/src/index.css
@@ -20,26 +20,26 @@ body {
 .container1 {
     background-color: rgb(45, 51, 77);
     color: white;
-    padding: 16px;
+    padding: 40px 16px;
 }
 
 .container2 {
     background-color: rgb(45, 51, 77);
     color: white;
-    padding: 16px;
+    padding: 80px 16px;
 }
 
 .container3 {
     background-color: rgb(45, 51, 77);
     color: white;
     margin-top: -16px;
-    padding: 16px;
+    padding: 40px 16px;
 }
 
 .container4 {
     background-color: rgb(45, 51, 77);
     color: white;
-    padding: 16px;
+    padding: 40px 16px;
 }
 
 .subForm {
@@ -168,3 +168,9 @@ table, th, td {
     text-align: center;
     padding: 20px;
   }
+
+.logincontainer {
+    background-color: rgb(45, 51, 77);
+    color: rgb(0, 237, 179);
+    min-height: 500px;
+}
