--- a/front/src/index.css
+++ b/front/src/index.css
@@ -34,6 +34,8 @@ body {
     color: white;
     margin-top: -16px;
     padding: 40px 16px;
+    z-index: 100;
+    /* z-index: -1; */
 }
 
 .container4 {
@@ -59,6 +61,7 @@ body {
 /* #### NAVBAR #### */
 nav {
     background-color: rgb(45, 51, 77);
+    /* position: absolute; */
 }
 .personalColor {
     color: white;
