--- a/front/src/index.css
+++ b/front/src/index.css
@@ -35,7 +35,6 @@ body {
     margin-top: -16px;
     padding: 40px 16px;
     z-index: 100;
-    /* z-index: -1; */
 }
 
 .container4 {
@@ -51,17 +50,17 @@ body {
 }
 
 .formContainer {
-    /* background-image: url("https://www.palestinalibre.org/fotos/6055220160331115960553.jpg");
+    background-image: url("https://www.palestinalibre.org/fotos/6055220160331115960553.jpg");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover; */
+    background-size: cover;
     background-color: rgb(45, 51, 77);
 }
 
-/* #### NAVBAR #### */
+/* #### INICIO NAVBAR #### */
+
 nav {
     background-color: rgb(45, 51, 77);
-    /* position: absolute; */
 }
 .personalColor {
     color: white;
@@ -89,14 +88,12 @@ nav {
     width: 10px;
 }
 
-
+/* #### FIN NAVBAR #### */
 
 
 .photo {
     width: 30%;
-    background-color: rgb(109, 109, 109);
-    color: black;
-    /* height: 50%; */
+    
 }
 
 .macLogo {
@@ -128,10 +125,6 @@ nav {
     height: 200px;
 }
 
-/* .fa-arrow-circle-right {
-    font-size: 10vw;
-} */
-
 @media (max-width: 299px) {
     .fa-arrow-circle-right {
         font-size: 2em;
@@ -150,7 +143,6 @@ nav {
     }
 }
 
-/* ### FORMULARIO ### */
 .position-inherit {
     position: inherit !important;
 }  
@@ -197,3 +189,33 @@ table, th, td {
     border-radius: 25px;
     position: inherit !important;
 }
+
+#form a {
+    text-decoration: none;
+    color: black;
+}
+
+#form a:hover {
+    text-decoration: none;
+    color: rgb(0, 237, 179);
+}
+
+/* #### PRINCIPIO FOOTER #### */
+
+.footer {
+    background-color: rgb(45, 51, 77) !important;
+    color: white;
+}
+
+.footer a {
+    text-decoration: none !important;
+    color: white;
+}
+
+.footer a:hover {
+    text-decoration: none !important;
+    color: rgb(0, 237, 179);
+}
+
+
+/* #### FIN FOOTER #### */
