--- a/front/src/index.css
+++ b/front/src/index.css
@@ -4,6 +4,9 @@
     top: 0 !important;
     width: 100% !important;
 } */
+
+/* ############ INICIO GENERAL ############ */
+
 @font-face{
     font-family: AuroBlack;
     src: url('../src/fonts/auroblack.otf');
@@ -30,56 +33,25 @@ h2, h3, h4, h5, h6, p, nav {
     background-color: rgb(45, 51, 77);
 }
 
-.container1 {
-    background-color: rgb(45, 51, 77);
-    color: white;
-    padding: 40px 16px;    
+.position-inherit {
+    position: inherit !important;
+}  
+
+.aviso {
+    background-color: rgb(0, 237, 179);
+    color: rgb(45, 51, 77);
+    width: 70%;
+    border-radius: 10px;
+    padding: 500px;
 }
 
-.rowOJ {
-    height: 100vh;
-    vertical-align: middle !important;
+.aviso .btn {
+    float: right;
 }
 
-.logoPPOJ {
-    width: 80%;
-}
+/* ############ FIN GENERAL ############ */
 
-.container2 {
-    background-color: rgb(45, 51, 77);
-    color: white;
-    padding: 80px 16px;
-}
-
-.container3 {
-    background-color: rgb(45, 51, 77);
-    color: white;
-    margin-top: -16px;
-    padding: 40px 16px;
-    z-index: 100;
-}
-
-.container4 {
-    background-color: rgb(45, 51, 77);
-    color: white;
-    padding: 40px 16px;
-}
-
-.subForm {
-    background-color: rgba(255, 255, 255, 0.5);
-    text-align: center;
-    border-radius: 15px;
-}
-
-.formContainer {
-    background-image: url("https://www.palestinalibre.org/fotos/6055220160331115960553.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-color: rgb(45, 51, 77);
-}
-
-/* #### INICIO NAVBAR #### */
+/* ############ INICIO NAVBAR ############ */
 
 nav {
     background-color: rgb(45, 51, 77);
@@ -110,7 +82,88 @@ nav {
     width: 10px;
 }
 
-/* #### FIN NAVBAR #### */
+/* ############ FIN NAVBAR ############ */
+
+/* ############ INICIO WELCOME ############ */
+
+.container1 {
+    background-color: rgb(45, 51, 77);
+    color: white;
+    width: 100vw;  
+}
+
+.rowW {
+    height: 100vh;
+    vertical-align: middle !important;
+}
+
+.logoPPOJ {
+    width: 80%;
+}
+
+/* ############ FIN WELCOME ############ */
+
+/* ############ INICIO OURJOB ############ */
+
+.container2 {
+    background-color: rgb(45, 51, 77);
+    color: white;
+    width: 100vw;
+}
+
+.mlOJ {
+    border-top: 2px solid rgb(0, 237, 179);
+    border-right: 2px solid rgb(0, 237, 179);
+    height: 50px;
+}
+
+.brOJ {
+    border-top: 2px solid rgb(0, 237, 179);
+}
+
+.CobOnl {
+    width: 50%;
+    height: auto;
+}
+
+.LogoPP {
+    width: 80%;
+    height: auto;
+}
+
+
+
+/* ############ FIN OURJOB ############ */
+
+.container3 {
+    background-color: rgb(45, 51, 77);
+    color: white;
+    margin-top: -16px;
+    padding: 40px 16px;
+    z-index: 100;
+}
+
+.container4 {
+    background-color: rgb(45, 51, 77);
+    color: white;
+    padding: 40px 16px;
+}
+
+.subForm {
+    background-color: rgba(255, 255, 255, 0.5);
+    text-align: center;
+    border-radius: 15px;
+}
+
+.formContainer {
+    background-image: url("https://www.palestinalibre.org/fotos/6055220160331115960553.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-color: rgb(45, 51, 77);
+}
+
+
 
 
 .photo {
@@ -125,17 +178,7 @@ nav {
     border-radius: 40%;
 }
 
-.CobOnl {
-    padding: 60px;
-    max-width: 50%;
-    height: auto;
-}
 
-.LogoPP {
-    padding: 60px;
-    width: 50%;
-    height: auto;
-}
 
 .co, .pp {
     width: 45%;
@@ -165,20 +208,9 @@ nav {
     }
 }
 
-.position-inherit {
-    position: inherit !important;
-}  
 
-.aviso {
-    background-color: rgb(0, 237, 179);
-    color: rgb(45, 51, 77);
-    width: 70%;
-    border-radius: 10px;
-}
 
-.aviso .btn {
-    float: right;
-}
+
 
 table, th, td {
     border: 1px solid  rgb(0, 237, 179);
