--- a/front/src/index.css
+++ b/front/src/index.css
@@ -44,9 +44,9 @@ hr {
 .aviso {
     background-color: rgb(0, 237, 179);
     color: rgb(45, 51, 77);
-    width: 70%;
-    border-radius: 10px;
-    padding: 500px;
+    width: 100vw;
+    /* border-radius: 10px; */
+    padding: 100px;
 }
 
 .aviso .btn {
@@ -67,7 +67,7 @@ nav {
     top: 0 !important;
 }
 .navbar, html{
-    width: 95% !important;
+    width: 100% !important;
 }
 .navbar-light .navbar-toggler-icon{ 
     color: rgb(0, 237, 179);
@@ -91,18 +91,28 @@ nav {
 /* ############ INICIO WELCOME ############ */
 
 .container1 {
-    background-color: rgb(45, 51, 77);
-    color: white;
-    width: 100vw;  
+    background-color: white;
+    color:  rgb(45, 51, 77);
+    width: 100vw;
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;  
 }
 
-.rowW {
-    height: 100vh;
+/* .cuadro {
+    background-color: rgb(255, 255, 255, 0.7);
+    border-radius: 50px;
+    
+} */
+
+/* .rowW {
     vertical-align: middle !important;
-}
+} */
 
 .logoPPOJ {
     width: 80%;
+    border-radius: 50px;
 }
 
 /* ############ FIN WELCOME ############ */
@@ -113,9 +123,11 @@ nav {
     background-color: rgb(45, 51, 77);
     color: white;
     width: 100vw;
+    min-height: 100vh;
+    padding: 80px 0;
 }
 
-.mlOJ {
+/* .mlOJ {
     border-top: 2px solid rgb(0, 237, 179);
     border-right: 2px solid rgb(0, 237, 179);
     height: 50px;
@@ -123,7 +135,7 @@ nav {
 
 .brOJ {
     border-top: 2px solid rgb(0, 237, 179);
-}
+} */
 
 .CobOnl {
     width: 50%;
@@ -131,7 +143,7 @@ nav {
 }
 
 .LogoPP {
-    width: 80%;
+    width: 40%;
     height: auto;
 }
 
